--- a/index.html
+++ b/index.html
@@ -124,6 +124,6 @@
     ></script>
 
     <!-- my js -->
-    <script src="./app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
